tests/snapshots/run_wpt_conformance__coreml_logicalXor_uint8_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_xor.https.any.js logicalXor uint8 2D tensors, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 4-byte elements (code 65568), but input is Uint8 (1-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[4, 6];
    inputB: u8[4, 6];
  }

  nodes {
    [output] = logicalXor(inputA, inputB, label="");
  }

  outputs { output; }
}
